--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; font-src 'self' https://fonts.gstatic.com/; style-src 'self' https://fonts.googleapis.com/ 'unsafe-inline';"
+      content="default-src 'self'; 
+      font-src 'self' https://fonts.gstatic.com/; 
+      img-src * data: blob: 'unsafe-inline'; 
+      style-src 'self' https://fonts.googleapis.com/ 'unsafe-inline';"
     />
 
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
